[tool.poetry]
name = "devtodev-raw-export-wrapper"
version = "0.1.0"
description = ""
authors = ["Oleg Ionov <ionov.dpmn@gmail.com>"]
readme = "README.md"
packages = [{include = "devtodev_raw_export_wrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
